--- a/LockProService.html
+++ b/LockProService.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>提词器Pro 用户服务</title>
+    <title>应用锁PRO 用户服务</title>
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
             </div>
 
             <div class="middle">
-                <div class="phone">提词器Pro 用户服务</div>
+                <div class="phone">应用锁PRO 用户服务</div>
                 <div > </div>
 
                 <div class="phone">联系方式：</div>
@@ -33,7 +33,7 @@
                 <div>
                 </div>
                 <div class="link">
-                    <span>提词器Pro@2023</span>
+                    <span>应用锁PRO@2024</span>
 <!--                    <a href=""> 京ICP备20028735号</a>-->
                 </div>
             </div>
